# yaar

./: .gitignore  Cargo.toml  LICENSE
packaging/: yaar-kde.desktop
packaging/arch/: PKGBUILD
src/: command.rs  config.rs  devices.rs  main.rs
