[package]
name = "yaar"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
env_logger = "0.11.5"
hex = "0.4.3"
indexmap = { version = "2.6.0", features = ["serde"] }
itertools = "0.13.0"
log = "0.4.22"
pasedid = { git = "https://codeberg.org/sebdotv/pasedid.git", branch = "support-non-0-dummy-descriptor", version = "0.2.0" }
serde = { version = "1.0.210", features = ["derive"] }
serde_yml = "0.0.12"
walkdir = "2.5.0"
xrandr = "0.2.0"
